# DiPBaCpp

./: .gitignore  .gitmodules  CMakeLists.txt  DiPBaC.cpp  README  profileRegression.cpp
data/input/: example_Bernoulli_Discrete_input.txt  example_Binomial_Normal_input.txt  example_Normal_Discrete_input.txt  example_Normal_Normal_input.txt  example_Normal_predictX.txt  example_Poisson_Discrete_input.txt  example_Poisson_Normal_input.txt  example_Poisson_Normal_predictW.txt  example_Poisson_Normal_predictX.txt  example_Poisson_Normal_predictYW.txt  example_Poisson_discrete_input.txt  example_Var_Select_Bernoulli_Discrete_input.txt  example_binary_discrete_input.txt  example_hyperparameter_file.txt
data/output/: README
documentation/: README
include/: DiPBaCData.h  DiPBaCIO.h  DiPBaCModel.h  DiPBaCOptions.h  DiPBaCProposals.h  profileRegressionData.h  profileRegressionIO.h  profileRegressionModel.h  profileRegressionOptions.h  profileRegressionProposals.h
include/DiPBaC/: DiPBaCIO.h  DiPBaCProposals.h
include/DiPBaC/Math/: distribution.h  mathfunctions.h  random.h
include/MCMC/: chain.h  model.h  proposal.h  sampler.h  state.h
include/MCMCpp/: chain.h  model.h  proposal.h  random.h  sampler.h
include/Math/: distribution.h  random.h
rfiles/DiPBaC/: DESCRIPTION
rfiles/DiPBaC/R/: .gitignore  generateData.R  postProcess.R
rfiles/DiPBaC/man/: .gitignore  DiPBaC-package.Rd
rfiles/DiPBaC/src/: postProcess.cpp
rfiles/DiPBaC/src/include/: postProcess.h
